--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,26 +1,30 @@
 .header{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
     width: 90%;
-    height: 116px;
-    margin-top: 17px;
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-top: 1.3%;
+    margin-bottom: 1.3%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.airsocLogos{
+    width: 50%
 }
 
 .airsoc_iitr{
-    height: 61px;
-    width: 143px;
-    margin-left: 11px;
+    width: 30%;
 }
 
 .airsoc_logo1{
-    width: 108px;
-    height: 98px;
+    margin-right: 3%;
+    width: 20%;
 }
 
 .iitr_logo{
-    width: 116px;
-    margin-left: 70%;  
-    height: 116px;
+    width: 10%;
 }
 
 
