--- a/src/App.css
+++ b/src/App.css
@@ -7,4 +7,6 @@ body{
   background-color: white;
   width: 90%;
   margin: 20px auto 40px auto; 
+  border-top-left-radius: 2vw;
+  border-top-right-radius: 2vw;
 }
