--- a/src/components/NavbarH.css
+++ b/src/components/NavbarH.css
@@ -2,12 +2,14 @@
 
 nav{
     z-index: 2;
+    background-color: #d9d9d9;
+    border-top-left-radius: 2vw;
+    border-top-right-radius: 2vw;
   }
 
 #navbar{
     width: 90% !important;
 }  
-
 
 
   /**************************************Nav links***********************/
@@ -25,7 +27,7 @@ nav{
     margin-left: 0.75rem;
     margin-right: 0.75rem;
     color: black !important;
-    border-top: 0.1875rem solid rgba(255,255,255,0);
+    border-bottom: 0.1875rem solid rgba(255,255,255,0);
   }
   
   .navbar-brand{
@@ -41,9 +43,9 @@ nav{
   }
   
   .navbar-nav > li >a.active, .navbar-nav > li > a:focus{
-    border-top: 0.1875rem solid #f9ab00;
+    border-bottom: 0.1875rem solid #000000;
   }
   
   .navbar-nav > li > a:hover{
-    border-top: 0.1875rem solid #f9ab00;
+    border-bottom: 0.1875rem solid #000000;
   }
