--- a/src/components/NavbarP.css
+++ b/src/components/NavbarP.css
@@ -25,7 +25,7 @@ nav{
     margin-left: 0.75rem;
     margin-right: 0.75rem;
     color: black !important;
-    border-top: 0.1875rem solid rgba(255,255,255,0);
+    border-bottom: 0.1875rem solid rgba(255,255,255,0);
   }
   
   .navbar-brand{
@@ -41,9 +41,9 @@ nav{
   }
   
   .navbar-nav > li >a.active, .navbar-nav > li > a:focus{
-    border-top: 0.1875rem solid #f9ab00;
+    border-bottom: 0.1875rem solid #000000;
   }
   
   .navbar-nav > li > a:hover{
-    border-top: 0.1875rem solid #f9ab00;
+    border-bottom: 0.1875rem solid #000000;
   }
