--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -32,6 +32,10 @@
 .projectsImage{
     width: 20vw;
     height: 17vw;
+    border-width: 10px;
+    border-style: double;
+    border-radius: 50%;
+    border-color: #D9D9D9;
 }
 
 .projectsContent{
