ui changes added

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -37,7 +37,7 @@
 .aboutImage{
     width: 12vw;
     height: 12vw;
-    border-width: 4px;
+    border-width: 0.3vw;
     border-style:double;
     border-radius: 50%;
     border-color: #D9D9D9;
