--- a/src/components/Milestones.css
+++ b/src/components/Milestones.css
@@ -46,7 +46,7 @@
     height: 8vw;
     font-size: 4vw;
     font-weight: bolder;
-    border-width: 5px;
+    border-width: 0.4vw;
     border-style: double;
     border-radius: 50%;
     border-color: #D9D9D9;
