--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -31,7 +31,6 @@
 .contactIcons{
     display: flex;
     flex-direction: row;
-    /* background-color: aqua; */
     width: 100vw;
     height: 10vw;
     align-items: center;
@@ -39,6 +38,14 @@
 }
 
 .contactIcon{
-    /* background-color: aquamarine; */
     height: 10vw;
+} 
+
+.icon{
+    font-size: 4vw;
+    color: black;
+    border-style: double;
+    border-radius: 50%;
+    border-color: #D9D9D9;
+    border-width: 0.3vw;
 }
