--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -32,7 +32,7 @@
 .projectsImage{
     width: 20vw;
     height: 17vw;
-    border-width: 10px;
+    border-width: 0.5vw;
     border-style: double;
     border-radius: 50%;
     border-color: #D9D9D9;
