--- a/src/components/Gallery.css
+++ b/src/components/Gallery.css
@@ -6,19 +6,6 @@
     flex-wrap: wrap;
 }
 
-.galleryHeader{
-    margin-left: 6vw;
-    margin-top: 5vw;
-    margin-right: 4vw;
-    font-family: 'Lora', serif;
-    width: 100vw;
-    padding-left: 3.5vw;
-    border-bottom-width:0.1vw;
-    border-bottom-style:solid;
-    border-bottom-color:black;
-    font-size: 2.5vw;
-}
-
 .galleryCarousel{
     margin: 6vw;
     margin-bottom: 2vw;
@@ -31,7 +18,7 @@
     height: 50vw;
 }
 
-.galleryButton{
+.submitButton{
     margin-left: 6vw;
     font-size: 1vw;
 }
