--- a/src/components/Milestones.css
+++ b/src/components/Milestones.css
@@ -6,19 +6,6 @@
     flex-wrap: wrap;
 }
 
-.milestonesHeader{
-    margin-left: 6vw;
-    margin-top: 5vw;
-    margin-right: 4vw;
-    font-family: 'Lora', serif;
-    width: 100vw;
-    padding-left: 3.5vw;
-    border-bottom-width:0.1vw;
-    border-bottom-style:solid;
-    border-bottom-color:black;
-    font-size: 2.5vw;
-}
-
 .milestoneList{
     display: flex;
     flex-direction: row;
@@ -63,7 +50,7 @@
     font-size: 1vw;
 }
 
-.milestonesButton{
+.submitButton{
     margin-left: 6vw;
     font-size: 1vw;
 }
