--- a/src/components/NavbarP.css
+++ b/src/components/NavbarP.css
@@ -45,5 +45,5 @@ nav{
   }
   
   .navbar-nav > li > a:hover{
-    border-bottom: 0.1875rem solid #000000;
+    border-bottom: 0.1875rem solid #E07785;
   }
