--- a/src/components/About.css
+++ b/src/components/About.css
@@ -6,19 +6,6 @@
     flex-wrap: wrap;
 }
 
-.aboutHeader{
-    margin-left: 6vw;
-    margin-top: 5vw;
-    margin-right: 4vw;
-    font-family: 'Lora', serif;
-    width: 100vw;
-    padding-left: 3.5vw;
-    border-bottom-width:0.1vw;
-    border-bottom-style:solid;
-    border-bottom-color:black;
-    font-size: 2.5vw;
-}
-
 .upper_part{
     display: flex;
     flex-direction: row;
@@ -41,6 +28,7 @@
     border-style:double;
     border-radius: 50%;
     border-color: #D9D9D9;
+    background-color: white;
 }
 
 .lower_part{
