--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -6,19 +6,6 @@
     flex-wrap: wrap;
 }
 
-.contactsHeader{
-    margin-left: 6vw;
-    margin-top: 5vw;
-    margin-right: 4vw;
-    font-family: 'Lora', serif;
-    width: 100vw;
-    padding-left: 3.5vw;
-    border-bottom-width:0.1vw;
-    border-bottom-style:solid;
-    border-bottom-color:black;
-    font-size: 2.5vw;
-}
-
 .contactsContent{
     margin-top: 2vw;
     margin-left: 6vw;
@@ -47,5 +34,6 @@
     border-style: double;
     border-radius: 50%;
     border-color: #D9D9D9;
+    background-color: white;
     border-width: 0.3vw;
 }
