--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -1,12 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
 
-.projects{
+.work{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
 
-.projectsHeader{
+.workHeader{
     margin-left: 6vw;
     margin-top: 5vw;
     margin-right: 4vw;
@@ -19,7 +19,7 @@
     font-size: 2.5vw;
 }
 
-.projectsImages{
+.workImages{
     display: flex;
     flex-direction: row;
     margin: 6vw;
@@ -29,7 +29,7 @@
     justify-content: space-evenly;
 }
 
-.projectsImage{
+.workImage{
     width: 20vw;
     height: 17vw;
     border-width: 0.5vw;
@@ -38,7 +38,7 @@
     border-color: #D9D9D9;
 }
 
-.projectsContent{
+.workContent{
     margin-left: 6vw;
     margin-right: 4vw;
     margin-bottom: 3vw;
@@ -46,7 +46,7 @@
     font-size: 1vw;
 }
 
-.projectsButton{
+.workButton{
     margin-left: 6vw;
     font-size: 1vw;
 } 
