--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -27,11 +27,11 @@
     border-radius: 10%;
 }
 
-.launch{
+.rocket{
     width: 23vw;
     height: 17vw;
 }
-.plane{
+.aero{
     width: 23vw;
     height: 17vw;
 }
