--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500&display=swap');
 
 body{
   background: linear-gradient(298.57deg, #605195 12.76%, #E07785 86.63%);
@@ -38,3 +39,5 @@ body{
   width: 90vw;
   padding-left: 35vw;
 }
+
+
