--- a/src/components/NavbarP.css
+++ b/src/components/NavbarP.css
@@ -4,6 +4,10 @@ nav{
     z-index: 2;
   }
 
+.navbarP{
+  background-color: #d9d9d9;
+}
+
 #navbar{
     width: 90% !important;
 }  
@@ -13,7 +17,7 @@ nav{
   /**************************************Nav links***********************/
    
   nav a.nav-link{ 
-    letter-spacing: 0.0375rem;
+    letter-spacing: 0.0375rem; 
     cursor: pointer;
   }
   
