--- a/src/components/About.css
+++ b/src/components/About.css
@@ -12,7 +12,7 @@
     margin-right: 4vw;
     width: 100vw;
     height: fit-content;
-    font-size: 1vw; 
+    font-size: 1.2vw; 
 }
 .upper_part p{
     padding-top: 1vw;
@@ -30,5 +30,6 @@
 
 .aboutCarousel{
     margin-top: 4vw;
-    width: 90vw;
+    width: 70vw;
+    margin-left: 10vw;
 }   
